--- a/analyses.qmd
+++ b/analyses.qmd
@@ -12,7 +12,7 @@ Intro to the ms.
 
 Import data from NTNU University museum: Natron. Marc did a pivot table in excel.
 
-```{r setup, warning=FALSE}
+```{r setup, warning=FALSE, message=FALSE}
 library(tidyverse)
 library(readxl)
 library(DT)
@@ -20,7 +20,7 @@ library(lme4)
 library(ggridges)
 ```
 
-Imported DensityAnno2023.xlsx, with 3 regions all tree taxa and 7 heightclasses
+Imported `DensityAnno2023.xlsx`, with 3 regions all tree taxa and 7 heightclasses:
 
 ```{r}
 Data <- read_excel("data/DensityAnno2023.xlsx")
@@ -111,7 +111,8 @@ Data <- Data |>
 Check if the data file is ok
 
 ```{r}
-table(Data$Region)
+Data |>
+  count(Region)
 ```
 
 Three regions included: total of 34911 rows
@@ -740,9 +741,16 @@ Data %>%
 
 ### Subsetting data set
 
-We will use a frequentist approach to mixed effects modelling with `lme4`. We have a random structure given by the sampling design. Our fixed structure is defined from theoretical expectations (a model set) and no model selection is done. Effect sizes are interpreted using the estimated and the errors, simulating a normal distribution for the estimates. P-values are not reported.
+We will use a frequentist approach to mixed effects modelling with `lme4`. 
+We have a random structure given by the sampling design. 
+Our fixed structure is defined from theoretical expectations (a model set) 
+and no model selection/reduction is done. 
+Effect sizes are interpreted using the estimats and the errors, 
+simulating a normal distribution for the estimates. P-values are not reported.
 
-We will not look at the temporal trends, but rather focus on the last year. The last year with data is 2023, which is 15-11 years of data, depending on the region.
+We will not look at the temporal trends, but rather focus on the last year. 
+The last year with data is 2023, which is 15-11 years of data, 
+depending on the region.
 
 ### The Hedmark-Akershus sites were initiated at different times:
 
@@ -787,7 +795,9 @@ Data <- Data %>%
 table(Data$yearsSinceStart, Data$Region)
 ```
 
-It's a shame to cut 4 years with data, so I will just use the 2023 data for all regions. With only three regions it is possible to interpret the regional affect and duration effect combined.
+It's a shame to cut 4 years with data, so I will just use the 2023 data for all 
+regions. With only three regions it is possible to interpret the regional affect 
+and duration effect combined.
 
 Four localities were omitted due to disturbances
 
@@ -819,7 +829,8 @@ birchData <- modelData %>%
   filter(Taxa %in% c("Betula pubescens", "Betula pendula") )
 ```
 
-One hypothesis is about the quantity of large trees above browsing height. Let's define that as the height class 7 (\>3m).
+One hypothesis is about the quantity of large trees above browsing height. 
+Let's define that as the height class 7 (\>3m).
 
 ```{r}
 birchData7 <- birchData %>%
@@ -925,10 +936,19 @@ There are zeros in the data. Is that a mistake?
 We could try and aggregate the data first, before modelling.
 
 ### Data aggregation
-
+We can try to sum the number of stems per LocalityCode.
+This variation was explained in the random structure in the models above.
+If we aggregate this way, the data might fit easier.
 ```{r}
 modelData2 <- modelData |>
-  group_by(Taxa, Region, LocalityName, LocalityCode, Treatment, productivityIndex) |>
+  group_by(Taxa, 
+           Region, 
+           LocalityName, 
+           LocalityCode, 
+           Treatment, 
+           productivityIndex,
+           HeightClass,
+           height_cm) |>
   summarise(response = sum(Quantity))
 ```
 
@@ -942,17 +962,14 @@ qqnorm(resid(q1_a2))
 qqline(resid(q1_a2))
 ```
 
-```{r}
-
-```
 
 Then by species: the 4 main spruce, rowan, birch and pine
 
 ```{r}
-modelData2 <- modelData %>%
+modelData2_SA <- modelData2 %>%
   filter(Taxa == "Sorbus aucuparia")
-  q1_SAlog <- lme4::lmer(data = modelData2,
-  log(Quantity+1) ~ Treatment * productivityIndex + (1|Region))
+  q1_SAlog <- lme4::lmer(data = modelData2_SA,
+  log(response+1) ~ Treatment * productivityIndex + (1|Region))
 summary(q1_SAlog)
 qqnorm(resid(q1_SAlog))
 qqline(resid(q1_SAlog))
