--- a/R/productivity index.qmd
+++ b/R/productivity index.qmd
@@ -8,15 +8,10 @@ editor: visual
 library(readxl)
 library(knitr)
 library(tidyverse)
+options(scipen = 999)
 ```
 
 ## Productivity Index
-
-::: {.callout-note icon="false"}
-## Pay Attention
-
-OBS, note that this script needs to be re-run when we have the updated start-up year from Hedmark and Akershus
-:::
 
 ### Background and rationale
 
@@ -47,7 +42,7 @@ Option 3 is perhaps a more sensible option.
 
 ## Allometric models {#allo}
 
-Here are the allometric models I ill use.
+Here are the allometric models I ill use, from the Ecosystems paper. The units are not given in the table, but interpreted from the data to be grams.
 
 ```{r EM2, echo=FALSE, fig.cap="A screenshot of table EM2 from paper one above."}
 knitr::include_graphics("../images/tableEM2.PNG")
@@ -64,7 +59,7 @@ allo_spruce  <- function(hgt) {0.038068*hgt^2}
 
 ## Height distribution over time
 
-The number of stems in each height class (1-7) is recorded in the field, annually, since the start of the experiment. Height class 7 include all trees above 3 meters. We therefore have no precice height data for the tree community as more and more trees grow above 3 meters. First we will therefore explore the data and see how many years of data we can calculate the productivity index with.
+The number of stems in each height class (1-7) is recorded in the field, annually, since the start of the experiment. Height class 7 include all trees above 3 meters. We therefore have no precise height data for the tree community as more and more trees grow above 3 meters. First we will therefore explore the data and see how many years of data we can calculate the productivity index with.
 
 The sites in Hedmark-Akershus were initiated at different times:
 
@@ -179,8 +174,8 @@ dat <- dat |>
 
 ```{r fig-dist-biomass}
 #| code-fold: true
-#| fig.cap: "Variation in total biomass. Each point is a 2 m radii circle. Units unknown."
-plot(dat$biomass, ylab = "Biomass")
+#| fig.cap: "Variation in total biomass. Each point is a the biomass of one taxa in 2 m radii circle."
+plot(dat$biomass, ylab = "Biomass (g)")
 ```
 
 Then we can sum the biomass across all species at each site.
@@ -193,12 +188,15 @@ dat_site <- dat |>
   
 dat_site |>
   ggplot() +
-  geom_line(aes(x = yearsSinceStart, y = Biomass, 
+  geom_line(aes(x = yearsSinceStart, y = Biomass/1000, 
                 group = LocalityCode,
-                color = Region))
+                color = Region))+
+  labs(y = "Biomass (kg)")+
+  ylim(c(0,300))
+
 ```
 
-We see in @fig-biomassInc that biomass accumulated relatively linearly for Telemakr and Trøndelag, but that for the more productive region Hedmark-Akerhus we see a plateu caused by more trees going into the 7th height category where all trees are said to be 325 cm even if they are much taller in reality.
+We see in @fig-biomassInc that biomass accumulated relatively linearly for Telemark and Trøndelag, but that for the more productive region Hedmark-Akerhus we see a plateu caused by more trees going into the 7th height category where all trees are said to be 325 cm even if they are much taller in reality.
 
 It is maybe an issue that some sites in Hedmark-Akershus had more biomass at the start of the experiemet than some other sites have at the end. This could simply be because the start-up year is wrong for these sites in Hedmark-Akershus. In any case, for this exercise I can normalise each time series against the start value.
 
@@ -215,12 +213,13 @@ dat_site <- dat_site |>
 
 dat_site |>
   ggplot() +
-  geom_line(aes(x = yearsSinceStart, y = Biomass_norm, 
+  geom_line(aes(x = yearsSinceStart, y = Biomass_norm/1000, 
                 group = LocalityCode,
-                color = Region))
+                color = Region))+
+  labs(y = "Biomass (g)")
 ```
 
-Most sites are able to reach 25000 units of biomass so I will use that as the threshold value.
+Most sites are able to reach 25 kg of biomass per circle, so I will use that as the threshold value.
 
 ```{r fig-productivity}
 #| code-fold: true
